Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3752

Problem with larger headers and HTTP/2

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.0.0
    • HTTP/2

    Description

      There is a problem when ATS receives a HEADERS or CONTINUATION frame on the HEADERS frame and there is no end of header to be decoded. If there is 1 small header at the beginning of the frame it will work, but if a large header either starts at the beginning of the frame or started on the previous frame and don't end until the next frame then the decoded_bytes will be 0. This will cause a COMPRESSION_ERROR to be send to the client with a GOAWAY frame.

      Attachments

        Activity

          People

            masaori Masaori Koshiba
            bcall Bryan Call
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: